--- a/index.html
+++ b/index.html
@@ -71,9 +71,11 @@
             border: 1px solid #ffc0cb;
         }
         h1 {
-            text-align: center;
-            color: #db7093;
-        }
+    text-align: center;
+    color: #db7093;
+    font-size: 1.3em; /* ここを追加 */
+}
+
         table {
             width: 100%;
             margin-top: 20px;
@@ -122,7 +124,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>仕入れ判断</h1>
+        <h1>仕入れ判断 計算サイト</h1>
         <form id="profitCalculator">
             <label for="sellingPrice">販売価格（円）:</label>
         <input type="number" id="sellingPrice" placeholder="0" required>
