--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     color: #db7093;
 }
 
-
-
                      /* 計算結果の表示エリア */
                      #resultText {
                     margin-top: 10px;  /* ボタンとの間隔 */
@@ -128,7 +126,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>仕入れ判断 計算サイト</h1>
+        <h1>계산기</h1>
         <form id="profitCalculator">
             <label for="sellingPrice">販売価格（円）:</label>
         <input type="number" id="sellingPrice" placeholder="0" required>
