--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
                 <option value="455">🏣¥455 ゆうパケットプラス（要専用箱）</option>
                 <option value="210">🐈‍⬛¥210 ネコポス（ポスト受取サイズ）</option>
                 <option value="450">🐈‍⬛¥450 宅急便コンパクト</option>
+                <option value="750">📦¥750 60サイズ</option>
                 <option value="None">手入力する</option>
             </select>
 
