--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         <h1>계산기</h1>
         <form id="profitCalculator">
             <label for="sellingPrice">販売価格（円）:</label>
-        <input type="number" id="sellingPrice" placeholder="0" required>
+        <input type="number" id="exchangeRate" value="0.1" step="0.01" min="0" required>
         <br><br>
 
         <!-- 手数料率のフィールドを削除し、販売プラットフォームの選択のみ残す -->
