--- a/index.html
+++ b/index.html
@@ -205,23 +205,22 @@
 <button onclick="copyToClipboard()">コピー</button>
 
 <textarea id="copyText" readonly style="background-color: #fffaf0; border: 1px solid #ffc0cb; color: #db7093;">
-🔻 仕入れ判断 🔻
+仕入れ判断
 
-①簡単な商品タイトル
-【       】
+①商品タイトル
 
-②
+②（計算結果コピペ）
 
-③仕入れる種類ごとの個数
-(カラーとサイズごとの個数)
+③仕入れる種類・個数
 
-④考察（③と考えた具体的な根拠）
+④メモ
 
-⑤-1検索全体画面のURLを添付
+⑤-1検索全体画面URL
+▼売り切れ、新しい順
 
-⑤-2販売ページURLを添付
+▼販売中、新しい順
 
-⑥仕入れ先ページのURL
+⑥仕入れ先ページURL
 </textarea>
 <button onclick="copyToClipboard('copyText')">コピー</button>
 
